Fixed the profile button hover effect duplication in dark mode

--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -2,104 +2,110 @@
    MASTHEAD
    ========================================================================== */
 
-   .masthead {
-    position: relative;
-    z-index: 20;
-    background: $masthead-background;
+.masthead {
+  position: relative;
+  z-index: 20;
+  background: $masthead-background;
+  display: block !important;
 
-    &__inner-wrap {
-      @include clearfix;
-      margin-left: auto;
-      margin-right: auto;
-      padding: 0em;
-      max-width: 100%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-      justify-content: space-between;
-      font-family: $sans-serif-narrow;
+  &__inner-wrap {
+    @include clearfix;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0em;
+    max-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    font-family: $sans-serif-narrow;
 
-      @include breakpoint($x-large) {
-        max-width: $max-width;
-      }
-
-      nav {
-        z-index: 10;
-      }
-
-      a {
-        text-decoration: none;
-      }
+    @include breakpoint($x-large) {
+      max-width: $max-width;
     }
 
-    &.sticky {
-      @include clearfix();
-      position: -webkit-sticky;
-      position: sticky;
-      top: 0em;
+    nav {
+      z-index: 10;
+    }
+
+    a {
+      text-decoration: none;
+    }
+  }
+
+  &.sticky {
+    @include clearfix();
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0em;
+    float: right;
+  }
+}
+
+.masthead::after {
+  position:absolute; width:0; height:0; overflow:hidden; z-index:-1;
+  content: url('/assets/images/splash-2.png') url('/assets/images/splash-5.jpg') url('/assets/images/favicon/favicon-1.png');
+}
+
+.site-logo img {
+  max-height: 2.5rem;
+  margin-left: 0.3rem;
+}
+
+.site-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+  align-self: center;
+  font-weight: bold;
+  font-size: $type-size-6;
+
+  // z-index: 20;
+}
+
+.site-subtitle {
+  display: block;
+  font-weight: normal;
+  font-size: $type-size-7;
+}
+
+.masthead__menu {
+  float: left;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+  clear: both;
+
+  .site-nav {
+    margin-left: 0;
+
+    @include breakpoint($small) {
       float: right;
     }
   }
 
-  .site-logo img {
-    max-height: 2.5rem;
-    margin-left: 0.3rem;
-  }
-
-  .site-title {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-item-align: center;
-    align-self: center;
-    font-weight: bold;
-    font-size: $type-size-6;
-
-    // z-index: 20;
-  }
-
-  .site-subtitle {
-    display: block;
-    font-weight: normal;
-    font-size: $type-size-7;
-  }
-
-  .masthead__menu {
-    float: left;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
+  ul {
+    margin: 0;
+    padding: 0;
     clear: both;
-
-    .site-nav {
-      margin-left: 0;
-
-      @include breakpoint($small) {
-        float: right;
-      }
-    }
-
-    ul {
-      margin: 0;
-      padding: 0;
-      clear: both;
-      list-style-type: none;
-    }
-  }
-
-  .masthead__menu-item {
-    display: block;
     list-style-type: none;
-    white-space: nowrap;
-    font-size: $type-size-6;
-
-    &--lg {
-      padding-right: 2em;
-      font-weight: 700;
-    }
   }
+}
+
+.masthead__menu-item {
+  display: block;
+  list-style-type: none;
+  white-space: nowrap;
+  font-size: $type-size-6;
+
+  &--lg {
+    padding-right: 2em;
+    font-weight: 700;
+  }
+}
 
 .masthead__menu-item a {
   color: black !important;
